Better workaround for missing picture on fullscreen switch and .desktop file fixes

--- a/.settings
+++ b/.settings
@@ -1,6 +1,5 @@
 [Breakpoints]
-Breakpoint[1]="AudioConvert.85"
-Count=1
+Count=0
 
 [DebugWindow]
 Count=0
@@ -1491,9 +1490,10 @@ File[1]=".src/0_Moduli/Global.module:268.0"
 Fold[1]=[182,201,207,215,257,274,277,280,284,299,311,323,345,357,375,463,574,616,668,918,929,942,957,989,999,1012]
 File[2]=".src/Classi/StartClass.class:20.15"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:9132.12"
+File[4]=".src/Form/FMain.class:10962.2"
 File[5]=".src/Classi/SettingsClass.class:589.6"
-File[6]="CHANGELOG_GIT:3.8"
+Active=6
+File[6]="CHANGELOG_GIT:3.10"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
 File[9]=".src/Classi/PlaylistClass.class:1210.3"
@@ -1504,8 +1504,7 @@ File[13]=".src/Form/DVBTuner.form"
 File[14]=".src/Form/OpenSubtitesForm.form"
 File[15]=".src/Form/RealtimeForm.form"
 File[16]=".src/Form/Searchfields.form"
-Active=17
-File[17]=".src/Classi/MplayerClass.class:769.4"
+File[17]=".src/Classi/MplayerClass.class:772.0"
 File[18]=".src/Form/ProfileManager.class:37.12"
 File[19]=".src/Form/AskName.class:17.14"
 File[20]=".src/Form/GeneralOptions.form"
@@ -1553,9 +1552,10 @@ File[61]="xt7-player.png"
 File[62]=".src/Form/AudioVideoCodecs.class:0.0"
 File[63]=".src/Form/XConfigureVideoDriver.class:318.0"
 File[64]=".src/Form/AudioConvert.form"
-File[65]=".src/Form/AudioConvert.class:93.8"
+File[65]=".src/Form/AudioConvert.class:160.71"
 File[66]=".src/Form/AskName.form"
-Count=66
+File[67]=".src/Classi/YoutubeClass.class:462.22"
+Count=67
 
 [Watches]
 Count=16
