Some audio temporary files were left in the temp folder, fixed.

--- a/.settings
+++ b/.settings
@@ -1,3 +1,6 @@
+[Bookmarks]
+AudioConvert=[]
+
 [Breakpoints]
 Count=0
 
@@ -1490,9 +1493,10 @@ File[1]=".src/0_Moduli/Global.module:268.0"
 Fold[1]=[182,201,207,215,257,274,277,280,284,299,311,323,345,357,375,463,574,616,668,918,929,942,957,989,999,1012]
 File[2]=".src/Classi/StartClass.class:20.15"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:4023.10"
+File[4]=".src/Form/FMain.class:10956.20"
 File[5]=".src/Classi/SettingsClass.class:589.6"
-File[6]="CHANGELOG_GIT:3.68"
+Active=6
+File[6]="CHANGELOG_GIT:3.10"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
 File[9]=".src/Classi/PlaylistClass.class:1210.3"
@@ -1507,7 +1511,6 @@ File[17]=".src/Classi/MplayerClass.class:772.0"
 File[18]=".src/Form/ProfileManager.class:37.12"
 File[19]=".src/Form/AskName.class:17.14"
 File[20]=".src/Form/GeneralOptions.form"
-Active=21
 File[21]=".src/Form/GeneralOptions.class:1115.0"
 File[22]=".src/Form/CoverManager.class:110.77"
 File[23]=".src/Form/EpgForm.class:604.24"
@@ -1552,7 +1555,7 @@ File[61]="xt7-player.png"
 File[62]=".src/Form/AudioVideoCodecs.class:0.0"
 File[63]=".src/Form/XConfigureVideoDriver.class:318.0"
 File[64]=".src/Form/AudioConvert.form"
-File[65]=".src/Form/AudioConvert.class:160.71"
+File[65]=".src/Form/AudioConvert.class:185.19"
 File[66]=".src/Form/AskName.form"
 File[67]=".src/Classi/YoutubeClass.class:462.22"
 Count=67
