Little glitch left off by the cachebar

--- a/.settings
+++ b/.settings
@@ -1,6 +1,3 @@
-[Bookmarks]
-AudioConvert=[]
-
 [Breakpoints]
 Count=0
 
@@ -1489,17 +1486,17 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]=".src/0_Moduli/Global.module:268.0"
-Fold[1]=[182,201,207,215,257,274,277,280,284,299,311,323,345,357,375,463,574,616,668,918,929,942,957,989,999,1012]
+File[1]=".src/0_Moduli/Global.module:261.0"
+Fold[1]=[182,201,207,215,274,277,280,284,299,311,323,345,357,375,463,574,616,668,918,929,942,957,989,999,1012]
 File[2]=".src/Classi/StartClass.class:20.15"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:10956.20"
+File[4]=".src/Form/FMain.class:8629.34"
 File[5]=".src/Classi/SettingsClass.class:589.6"
 Active=6
-File[6]="CHANGELOG_GIT:3.10"
+File[6]="CHANGELOG_GIT:6.75"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
-File[9]=".src/Classi/PlaylistClass.class:1210.3"
+File[9]=".src/Classi/PlaylistClass.class:1213.0"
 File[10]=".src/Form/EpgForm.form"
 File[11]=".src/Form/XConfigureAudioDriver.class:15.25"
 File[12]=".src/Form/AllOptions.form"
@@ -1507,7 +1504,7 @@ File[13]=".src/Form/DVBTuner.form"
 File[14]=".src/Form/OpenSubtitesForm.form"
 File[15]=".src/Form/RealtimeForm.form"
 File[16]=".src/Form/Searchfields.form"
-File[17]=".src/Classi/MplayerClass.class:772.0"
+File[17]=".src/Classi/MplayerClass.class:11.36"
 File[18]=".src/Form/ProfileManager.class:37.12"
 File[19]=".src/Form/AskName.class:17.14"
 File[20]=".src/Form/GeneralOptions.form"
@@ -1555,10 +1552,11 @@ File[61]="xt7-player.png"
 File[62]=".src/Form/AudioVideoCodecs.class:0.0"
 File[63]=".src/Form/XConfigureVideoDriver.class:318.0"
 File[64]=".src/Form/AudioConvert.form"
-File[65]=".src/Form/AudioConvert.class:185.19"
+File[65]=".src/Form/AudioConvert.class:144.0"
 File[66]=".src/Form/AskName.form"
 File[67]=".src/Classi/YoutubeClass.class:462.22"
-Count=67
+File[68]=".src/Form/AddUriForm.form"
+Count=68
 
 [Watches]
 Count=16
