FIX shoutcast xml parsing

--- a/.settings
+++ b/.settings
@@ -1,6 +1,3 @@
-[Bookmarks]
-YoutubeClass=[]
-
 [Breakpoints]
 Count=0
 
@@ -581,9 +578,6 @@ Geometry=[43,253,210,210]
 [DebugWindow/Split(sline, ":", "", TRUE)]
 Geometry=[0,0,344,344]
 
-[DebugWindow/Split(url, "|", "", True)]
-Geometry=[47,-3,403,363]
-
 [DebugWindow/Splitted]
 Geometry=[0,0,301,301]
 
@@ -921,6 +915,9 @@ Geometry=[0,0,227,584]
 
 [DebugWindow/epgscanprocess]
 Geometry=[0,0,210,210]
+
+[DebugWindow/feed]
+Geometry=[1280,-3,210,210]
 
 [DebugWindow/feedinfo]
 Geometry=[51,0,377,395]
@@ -1298,9 +1295,6 @@ Geometry=[48,-4,406,660]
 [DebugWindow/quickcheckbox]
 Geometry=[0,0,301,301]
 
-[DebugWindow/reader.Node]
-Geometry=[47,-3,572,385]
-
 [DebugWindow/result]
 Geometry=[255,559,672,590]
 
@@ -1362,7 +1356,7 @@ Geometry=[0,0,210,210]
 Geometry=[0,0,344,344]
 
 [DebugWindow/streaminfo]
-Geometry=[1588,497,607,262]
+Geometry=[47,0,561,246]
 
 [DebugWindow/subdir]
 Geometry=[0,326,242,262]
@@ -1497,14 +1491,15 @@ SearchString=True
 [OpenFile]
 File[1]=".src/0_Moduli/Global.module:261.0"
 Fold[1]=[182,201,207,215,274,277,280,284,299,311,323,345,357,375,463,574,616,668,918,929,942,957,989,999,1012]
-File[2]=".src/Classi/StartClass.class:39.31"
+File[2]=".src/Classi/StartClass.class:22.3"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:9224.2"
+File[4]=".src/Form/FMain.class:9332.8"
 File[5]=".src/Classi/SettingsClass.class:589.6"
-File[6]="CHANGELOG_GIT:4.42"
-File[7]=".src/Classi/ShoutCastClass.class:0.0"
+File[6]="CHANGELOG_GIT:2.0"
+Active=7
+File[7]=".src/Classi/ShoutCastClass.class:211.69"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
-File[9]=".src/Classi/PlaylistClass.class:1693.11"
+File[9]=".src/Classi/PlaylistClass.class:1213.0"
 File[10]=".src/Form/EpgForm.form"
 File[11]=".src/Form/XConfigureAudioDriver.class:15.25"
 File[12]=".src/Form/AllOptions.form"
@@ -1512,7 +1507,7 @@ File[13]=".src/Form/DVBTuner.form"
 File[14]=".src/Form/OpenSubtitesForm.form"
 File[15]=".src/Form/RealtimeForm.form"
 File[16]=".src/Form/Searchfields.form"
-File[17]=".src/Classi/MplayerClass.class:1349.10"
+File[17]=".src/Classi/MplayerClass.class:551.12"
 File[18]=".src/Form/ProfileManager.class:37.12"
 File[19]=".src/Form/AskName.class:17.14"
 File[20]=".src/Form/GeneralOptions.form"
@@ -1526,7 +1521,7 @@ File[27]=".src/Form/AudioForm.class:88.3"
 File[28]=".src/Form/FsForm.form"
 File[29]=".src/Form/zzzFake.class:120.25"
 File[30]=".src/Classi/Meters.class:76.3"
-File[31]="xt7-player.desktop:7.0"
+File[31]="xt7-player.desktop:0.0"
 File[32]=".src/Form/MyQuestion.class:107.3"
 File[33]=".src/Form/MyQuestion.form"
 File[34]=".src/Form/ladspahelper.form"
@@ -1547,7 +1542,7 @@ File[48]=".src/Form/HotKeys.form"
 File[49]=".src/Form/HotKeys.class:233.57"
 File[50]=".src/Form/FormLyrics.form"
 File[51]=".src/Form/FormLyrics.class:186.0"
-File[52]=".src/Classi/WgetClass.class:87.0"
+File[52]=".src/Classi/WgetClass.class:35.0"
 File[53]=".src/Form/AudioVideoCodecs.form"
 File[54]="AA_ToDo:523.23"
 File[55]=".src/Form/MyAskName.class:37.0"
@@ -1562,8 +1557,7 @@ File[63]=".src/Form/XConfigureVideoDriver.class:318.0"
 File[64]=".src/Form/AudioConvert.form"
 File[65]=".src/Form/AudioConvert.class:144.0"
 File[66]=".src/Form/AskName.form"
-Active=67
-File[67]=".src/Classi/YoutubeClass.class:286.9"
+File[67]=".src/Classi/YoutubeClass.class:145.7"
 File[68]=".src/Form/AddUriForm.form"
 Count=68
 
