Initial IceCast Radio support (still missing search ability)

--- a/.settings
+++ b/.settings
@@ -1489,16 +1489,16 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]=".src/0_Moduli/Global.module:261.0"
-Fold[1]=[182,201,207,215,274,277,280,284,299,311,323,345,357,375,463,574,616,668,918,929,942,957,989,999,1012]
-File[2]=".src/Classi/StartClass.class:22.3"
+File[1]=".src/0_Moduli/Global.module:104.62"
+Fold[1]=[184,203,209,217,276,279,282,286,301,313,325,347,359,377,465,576,618,670,920,931,944,959,991,1001,1014]
+Active=2
+File[2]=".src/Classi/StartClass.class:36.17"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:9332.8"
+File[4]=".src/Form/FMain.class:7813.20"
 File[5]=".src/Classi/SettingsClass.class:589.6"
-File[6]="CHANGELOG_GIT:2.0"
-Active=7
-File[7]=".src/Classi/ShoutCastClass.class:211.69"
-File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
+File[6]="CHANGELOG_GIT:21.0"
+File[7]=".src/Classi/ShoutCastClass.class:283.17"
+File[8]=".src/Classi/OpenSubtitlesAPI.class:100.10"
 File[9]=".src/Classi/PlaylistClass.class:1213.0"
 File[10]=".src/Form/EpgForm.form"
 File[11]=".src/Form/XConfigureAudioDriver.class:15.25"
@@ -1512,7 +1512,7 @@ File[18]=".src/Form/ProfileManager.class:37.12"
 File[19]=".src/Form/AskName.class:17.14"
 File[20]=".src/Form/GeneralOptions.form"
 File[21]=".src/Form/GeneralOptions.class:1115.0"
-File[22]=".src/Form/CoverManager.class:1238.45"
+File[22]=".src/Form/CoverManager.class:74.50"
 File[23]=".src/Form/EpgForm.class:604.24"
 File[24]=".src/Classi/AlbumView.class:252.31"
 File[25]=".src/Form/CoverManager.form"
@@ -1521,7 +1521,7 @@ File[27]=".src/Form/AudioForm.class:88.3"
 File[28]=".src/Form/FsForm.form"
 File[29]=".src/Form/zzzFake.class:120.25"
 File[30]=".src/Classi/Meters.class:76.3"
-File[31]="xt7-player.desktop:0.0"
+File[31]="xt7-player.desktop:12.44"
 File[32]=".src/Form/MyQuestion.class:107.3"
 File[33]=".src/Form/MyQuestion.form"
 File[34]=".src/Form/ladspahelper.form"
@@ -1537,12 +1537,12 @@ File[43]=".src/Form/ButtonMenu.form"
 File[44]=".src/Classi/FloatSpinBox.class:12.17"
 File[45]=".src/Form/SubAndOsd.class:200.24"
 File[46]=".src/Form/OverlayTrayTip.class:18.0"
-File[47]=".src/Form/OpenSubtitesForm.class:93.0"
+File[47]=".src/Form/OpenSubtitesForm.class:31.10"
 File[48]=".src/Form/HotKeys.form"
 File[49]=".src/Form/HotKeys.class:233.57"
 File[50]=".src/Form/FormLyrics.form"
 File[51]=".src/Form/FormLyrics.class:186.0"
-File[52]=".src/Classi/WgetClass.class:35.0"
+File[52]=".src/Classi/WgetClass.class:39.0"
 File[53]=".src/Form/AudioVideoCodecs.form"
 File[54]="AA_ToDo:523.23"
 File[55]=".src/Form/MyAskName.class:37.0"
@@ -1557,9 +1557,11 @@ File[63]=".src/Form/XConfigureVideoDriver.class:318.0"
 File[64]=".src/Form/AudioConvert.form"
 File[65]=".src/Form/AudioConvert.class:144.0"
 File[66]=".src/Form/AskName.form"
-File[67]=".src/Classi/YoutubeClass.class:145.7"
+File[67]=".src/Classi/YoutubeClass.class:354.29"
 File[68]=".src/Form/AddUriForm.form"
-Count=68
+File[69]=".src/Classi/PodCast.class:13.9"
+File[70]=".src/Classi/IceCastClass.class:13.20"
+Count=70
 
 [Watches]
 Count=16
