--- a/.settings
+++ b/.settings
@@ -554,6 +554,9 @@ Geometry=[51,0,210,210]
 [DebugWindow/Split(findout, "\n", "", TRUE)]
 Geometry=[0,0,344,344]
 
+[DebugWindow/Split(genre, Chr(0))]
+Geometry=[1280,-3,210,210]
+
 [DebugWindow/Split(history, "\n", "", True)]
 Geometry=[52,0,210,210]
 
@@ -976,6 +979,9 @@ Geometry=[822,472,339,451]
 [DebugWindow/generaloptions]
 Geometry=[1280,0,497,854]
 
+[DebugWindow/genresu]
+Geometry=[432,183,690,667]
+
 [DebugWindow/global]
 Geometry=[1280,0,580,802]
 
@@ -1167,6 +1173,9 @@ Geometry=[51,0,210,210]
 
 [DebugWindow/mysub]
 Geometry=[1470,250,668,467]
+
+[DebugWindow/mytree]
+Geometry=[1280,-3,440,591]
 
 [DebugWindow/node]
 Geometry=[48,40,1224,525]
@@ -1478,6 +1487,9 @@ Geometry=[0,0,210,503]
 ShowHidden=True
 Geometry=[2186,563,344,344]
 
+[DebugWindow/yplines]
+Geometry=[1280,-3,688,733]
+
 [DebugWindow/ytdloutlines]
 Geometry=[129,217,1000,396]
 
@@ -1491,13 +1503,13 @@ SearchString=True
 [OpenFile]
 File[1]=".src/0_Moduli/Global.module:104.62"
 Fold[1]=[184,203,209,217,276,279,282,286,301,313,325,347,359,377,465,576,618,670,920,931,944,959,991,1001,1014]
-Active=2
-File[2]=".src/Classi/StartClass.class:36.17"
+File[2]=".src/Classi/StartClass.class:48.25"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:7813.20"
-File[5]=".src/Classi/SettingsClass.class:589.6"
-File[6]="CHANGELOG_GIT:21.0"
-File[7]=".src/Classi/ShoutCastClass.class:283.17"
+File[4]=".src/Form/FMain.class:7794.0"
+File[5]=".src/Classi/SettingsClass.class:12.35"
+Active=6
+File[6]="CHANGELOG_GIT:3.10"
+File[7]=".src/Classi/ShoutCastClass.class:369.18"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:100.10"
 File[9]=".src/Classi/PlaylistClass.class:1213.0"
 File[10]=".src/Form/EpgForm.form"
@@ -1560,7 +1572,7 @@ File[66]=".src/Form/AskName.form"
 File[67]=".src/Classi/YoutubeClass.class:354.29"
 File[68]=".src/Form/AddUriForm.form"
 File[69]=".src/Classi/PodCast.class:13.9"
-File[70]=".src/Classi/IceCastClass.class:13.20"
+File[70]=".src/Classi/IceCastClass.class:27.0"
 Count=70
 
 [Watches]
