--- a/.project
+++ b/.project
@@ -13,12 +13,12 @@ Component=gb.desktop
 Component=gb.form.dialog
 Component=gb.settings
 Component=gb.form.mdi
+Component=gb.libxml
 Component=gb.net
 Component=gb.net.curl
 Component=gb.qt4.ext
 Component=gb.signal
 Component=gb.web
-Component=gb.xml
 Description="Xt7-Player, an (almost) complete mplayer gui"
 Authors="Antonio Orefice <xt7player@gmail.com>"
 TabSize=2
