--- a/.settings
+++ b/.settings
@@ -2,10 +2,7 @@
 Count=0
 
 [DebugWindow]
-Count=3
-DebugWindow[1]="node1.Children[t]"
-DebugWindow[2]="XmlElement(node1.Children[t]).Attributes"
-DebugWindow[3]="node1.Children[t].Attributes"
+Count=0
 
 [DebugWindow/AC3s]
 Geometry=[928,154,344,344]
@@ -535,6 +532,9 @@ Geometry=[48,-4,210,210]
 
 [DebugWindow/Split(Drag.Paste("text|uri-list"), "\n\r", "", True)]
 Geometry=[48,-4,210,210]
+
+[DebugWindow/Split(baddomains, ";")]
+Geometry=[47,-3,259,445]
 
 [DebugWindow/Split(chans[i], ":")]
 Geometry=[0,0,210,210]
@@ -1317,7 +1317,7 @@ Geometry=[0,0,301,301]
 Geometry=[255,559,672,590]
 
 [DebugWindow/resultlines]
-Geometry=[1321,263,959,679]
+Geometry=[1487,295,470,482]
 
 [DebugWindow/results]
 Geometry=[47,0,210,210]
@@ -1455,6 +1455,9 @@ Geometry=[664,142,359,803]
 [DebugWindow/urlfmt]
 Geometry=[0,0,1148,344]
 
+[DebugWindow/urls]
+Geometry=[1609,259,544,507]
+
 [DebugWindow/valuescontainer]
 Geometry=[0,0,344,344]
 
@@ -1512,12 +1515,12 @@ SearchString=True
 [OpenFile]
 File[1]=".src/0_Moduli/Global.module:104.62"
 Fold[1]=[184,203,209,217,276,279,282,286,301,313,325,347,359,377,465,576,618,670,920,931,944,959,991,1001,1014]
-File[2]=".src/Classi/StartClass.class:46.1"
-Active=3
+File[2]=".src/Classi/StartClass.class:2.10"
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/FMain.class:8250.22"
 File[5]=".src/Classi/SettingsClass.class:12.35"
-File[6]="CHANGELOG_GIT:13.11"
+Active=6
+File[6]="CHANGELOG_GIT:3.35"
 File[7]=".src/Classi/ShoutCastClass.class:246.19"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:100.10"
 File[9]=".src/Classi/PlaylistClass.class:1213.0"
@@ -1541,7 +1544,7 @@ File[26]=".src/Form/AudioForm.form"
 File[27]=".src/Form/AudioForm.class:88.3"
 File[28]=".src/Form/FsForm.form"
 File[29]=".src/Form/zzzFake.class:120.25"
-File[30]=".src/Classi/Meters.class:76.3"
+File[30]=".src/Classi/Meters.class:61.3"
 File[31]="xt7-player.desktop:12.44"
 File[32]=".src/Form/MyQuestion.class:107.3"
 File[33]=".src/Form/MyQuestion.form"
@@ -1562,7 +1565,7 @@ File[47]=".src/Form/OpenSubtitesForm.class:31.10"
 File[48]=".src/Form/HotKeys.form"
 File[49]=".src/Form/HotKeys.class:233.57"
 File[50]=".src/Form/FormLyrics.form"
-File[51]=".src/Form/FormLyrics.class:186.0"
+File[51]=".src/Form/FormLyrics.class:177.23"
 File[52]=".src/Classi/WgetClass.class:39.0"
 File[53]=".src/Form/AudioVideoCodecs.form"
 File[54]="AA_ToDo:523.23"
