--- a/.settings
+++ b/.settings
@@ -1517,10 +1517,9 @@ File[1]=".src/0_Moduli/Global.module:104.62"
 Fold[1]=[184,203,209,217,276,279,282,286,301,313,325,347,359,377,465,576,618,670,920,931,944,959,991,1001,1014]
 File[2]=".src/Classi/StartClass.class:2.10"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:8250.22"
+File[4]=".src/Form/FMain.class:8250.2"
 File[5]=".src/Classi/SettingsClass.class:12.35"
-Active=6
-File[6]="CHANGELOG_GIT:3.35"
+File[6]="CHANGELOG_GIT:5.11"
 File[7]=".src/Classi/ShoutCastClass.class:246.19"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:100.10"
 File[9]=".src/Classi/PlaylistClass.class:1213.0"
@@ -1585,7 +1584,9 @@ File[67]=".src/Classi/YoutubeClass.class:354.29"
 File[68]=".src/Form/AddUriForm.form"
 File[69]=".src/Classi/PodCast.class:35.0"
 File[70]=".src/Classi/IceCastClass.class:113.2"
-Count=70
+Active=71
+File[71]=".src/Classi/dvbsnoop_class.class:333.18"
+Count=71
 
 [Watches]
 Count=16
