--- a/.settings
+++ b/.settings
@@ -1513,17 +1513,17 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]=".src/0_Moduli/Global.module:104.62"
+File[1]=".src/0_Moduli/Global.module:263.16"
 Fold[1]=[184,203,209,217,276,279,282,286,301,313,325,347,359,377,465,576,618,670,920,931,944,959,991,1001,1014]
 File[2]=".src/Classi/StartClass.class:2.10"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:2687.53"
+File[4]=".src/Form/FMain.class:7297.0"
 File[5]=".src/Classi/SettingsClass.class:12.35"
 Active=6
-File[6]="CHANGELOG_GIT:3.20"
+File[6]="CHANGELOG_GIT:3.14"
 File[7]=".src/Classi/ShoutCastClass.class:246.19"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:100.10"
-File[9]=".src/Classi/PlaylistClass.class:1213.0"
+File[9]=".src/Classi/PlaylistClass.class:1227.0"
 File[10]=".src/Form/EpgForm.form"
 File[11]=".src/Form/XConfigureAudioDriver.class:15.25"
 File[12]=".src/Form/AllOptions.form"
@@ -1531,7 +1531,7 @@ File[13]=".src/Form/DVBTuner.form"
 File[14]=".src/Form/OpenSubtitesForm.form"
 File[15]=".src/Form/RealtimeForm.form"
 File[16]=".src/Form/Searchfields.form"
-File[17]=".src/Classi/MplayerClass.class:551.12"
+File[17]=".src/Classi/MplayerClass.class:680.0"
 File[18]=".src/Form/ProfileManager.class:37.12"
 File[19]=".src/Form/AskName.class:17.14"
 File[20]=".src/Form/GeneralOptions.form"
@@ -1581,12 +1581,13 @@ File[63]=".src/Form/XConfigureVideoDriver.class:318.0"
 File[64]=".src/Form/AudioConvert.form"
 File[65]=".src/Form/AudioConvert.class:144.0"
 File[66]=".src/Form/AskName.form"
-File[67]=".src/Classi/YoutubeClass.class:694.0"
+File[67]=".src/Classi/YoutubeClass.class:692.11"
 File[68]=".src/Form/AddUriForm.form"
 File[69]=".src/Classi/PodCast.class:35.0"
 File[70]=".src/Classi/IceCastClass.class:113.2"
 File[71]=".src/Classi/dvbsnoop_class.class:333.0"
-Count=71
+File[72]=".src/Form/AddUriForm.class:41.40"
+Count=72
 
 [Watches]
 Count=16
