--- a/.settings
+++ b/.settings
@@ -1513,14 +1513,14 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]=".src/0_Moduli/Global.module:263.16"
-Fold[1]=[184,203,209,217,276,279,282,286,301,313,325,347,359,377,465,576,618,670,920,931,944,959,991,1001,1014]
+File[1]=".src/0_Moduli/Global.module:484.106"
+Fold[1]=[184,203,209,217,276,279,282,286,301,313,325,347,359,377,576,618,670,920,931,944,959,991,1001,1014]
 File[2]=".src/Classi/StartClass.class:2.10"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:7297.0"
+File[4]=".src/Form/FMain.class:3082.32"
 File[5]=".src/Classi/SettingsClass.class:12.35"
 Active=6
-File[6]="CHANGELOG_GIT:3.54"
+File[6]="CHANGELOG_GIT:3.2"
 File[7]=".src/Classi/ShoutCastClass.class:246.19"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:100.10"
 File[9]=".src/Classi/PlaylistClass.class:1227.0"
@@ -1531,14 +1531,14 @@ File[13]=".src/Form/DVBTuner.form"
 File[14]=".src/Form/OpenSubtitesForm.form"
 File[15]=".src/Form/RealtimeForm.form"
 File[16]=".src/Form/Searchfields.form"
-File[17]=".src/Classi/MplayerClass.class:680.0"
+File[17]=".src/Classi/MplayerClass.class:1579.59"
 File[18]=".src/Form/ProfileManager.class:37.12"
 File[19]=".src/Form/AskName.class:17.14"
 File[20]=".src/Form/GeneralOptions.form"
 File[21]=".src/Form/GeneralOptions.class:1115.0"
 File[22]=".src/Form/CoverManager.class:74.50"
 File[23]=".src/Form/EpgForm.class:495.22"
-File[24]=".src/Classi/AlbumView.class:252.31"
+File[24]=".src/Classi/AlbumView.class:88.23"
 File[25]=".src/Form/CoverManager.form"
 File[26]=".src/Form/AudioForm.form"
 File[27]=".src/Form/AudioForm.class:88.3"
@@ -1558,7 +1558,7 @@ File[40]=".src/Classi/mpris.class:131.20"
 File[41]=".src/Form/Chains.class:301.0"
 File[42]=".src/0_Moduli/MyDialog.class:46.2"
 File[43]=".src/Form/ButtonMenu.form"
-File[44]=".src/Classi/FloatSpinBox.class:12.17"
+File[44]=".src/Classi/FloatSpinBox.class:133.23"
 File[45]=".src/Form/SubAndOsd.class:200.24"
 File[46]=".src/Form/OverlayTrayTip.class:18.0"
 File[47]=".src/Form/OpenSubtitesForm.class:31.10"
@@ -1584,10 +1584,11 @@ File[66]=".src/Form/AskName.form"
 File[67]=".src/Classi/YoutubeClass.class:664.13"
 File[68]=".src/Form/AddUriForm.form"
 File[69]=".src/Classi/PodCast.class:35.0"
-File[70]=".src/Classi/IceCastClass.class:113.2"
+File[70]=".src/Classi/IceCastClass.class:114.15"
 File[71]=".src/Classi/dvbsnoop_class.class:333.0"
 File[72]=".src/Form/AddUriForm.class:41.40"
-Count=72
+File[73]=".src/Classi/AudiotagClass.class:136.15"
+Count=73
 
 [Watches]
 Count=16
