--- a/.settings
+++ b/.settings
@@ -1515,12 +1515,12 @@ SearchString=True
 [OpenFile]
 File[1]=".src/0_Moduli/Global.module:484.106"
 Fold[1]=[184,203,209,217,276,279,282,286,301,313,325,347,359,377,576,618,670,920,931,944,959,991,1001,1014]
-File[2]=".src/Classi/StartClass.class:2.10"
+File[2]=".src/Classi/StartClass.class:20.0"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:3082.32"
+File[4]=".src/Form/FMain.class:8728.100"
 File[5]=".src/Classi/SettingsClass.class:12.35"
 Active=6
-File[6]="CHANGELOG_GIT:3.2"
+File[6]="CHANGELOG_GIT:4.10"
 File[7]=".src/Classi/ShoutCastClass.class:246.19"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:100.10"
 File[9]=".src/Classi/PlaylistClass.class:1227.0"
@@ -1532,10 +1532,10 @@ File[14]=".src/Form/OpenSubtitesForm.form"
 File[15]=".src/Form/RealtimeForm.form"
 File[16]=".src/Form/Searchfields.form"
 File[17]=".src/Classi/MplayerClass.class:1579.59"
-File[18]=".src/Form/ProfileManager.class:37.12"
+File[18]=".src/Form/ProfileManager.class:37.125"
 File[19]=".src/Form/AskName.class:17.14"
 File[20]=".src/Form/GeneralOptions.form"
-File[21]=".src/Form/GeneralOptions.class:1115.0"
+File[21]=".src/Form/GeneralOptions.class:503.104"
 File[22]=".src/Form/CoverManager.class:74.50"
 File[23]=".src/Form/EpgForm.class:495.22"
 File[24]=".src/Classi/AlbumView.class:88.23"
@@ -1543,10 +1543,10 @@ File[25]=".src/Form/CoverManager.form"
 File[26]=".src/Form/AudioForm.form"
 File[27]=".src/Form/AudioForm.class:88.3"
 File[28]=".src/Form/FsForm.form"
-File[29]=".src/Form/zzzFake.class:120.25"
+File[29]=".src/Form/zzzFake.class:7.0"
 File[30]=".src/Classi/Meters.class:61.3"
 File[31]="xt7-player.desktop:12.44"
-File[32]=".src/Form/MyQuestion.class:107.3"
+File[32]=".src/Form/MyQuestion.class:38.3"
 File[33]=".src/Form/MyQuestion.form"
 File[34]=".src/Form/ladspahelper.form"
 File[35]=".src/Form/AFiltersCfg.form"
@@ -1588,7 +1588,8 @@ File[70]=".src/Classi/IceCastClass.class:114.15"
 File[71]=".src/Classi/dvbsnoop_class.class:333.0"
 File[72]=".src/Form/AddUriForm.class:41.40"
 File[73]=".src/Classi/AudiotagClass.class:136.15"
-Count=73
+File[74]=".src/Classi/FlashClass.class:19.110"
+Count=74
 
 [Watches]
 Count=16
