New option in Generaloptions->Network to prefer (or discard) 3D videos from youtube

--- a/.settings
+++ b/.settings
@@ -1517,10 +1517,10 @@ File[1]=".src/0_Moduli/Global.module:484.106"
 Fold[1]=[184,203,209,217,276,279,282,286,301,313,325,347,359,377,576,618,670,920,931,944,959,991,1001,1014]
 File[2]=".src/Classi/StartClass.class:20.0"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:8728.100"
+Active=4
+File[4]=".src/Form/FMain.class:1953.40"
 File[5]=".src/Classi/SettingsClass.class:12.35"
-Active=6
-File[6]="CHANGELOG_GIT:3.55"
+File[6]="CHANGELOG_GIT:3.0"
 File[7]=".src/Classi/ShoutCastClass.class:246.19"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:100.10"
 File[9]=".src/Classi/PlaylistClass.class:1227.0"
@@ -1531,7 +1531,7 @@ File[13]=".src/Form/DVBTuner.form"
 File[14]=".src/Form/OpenSubtitesForm.form"
 File[15]=".src/Form/RealtimeForm.form"
 File[16]=".src/Form/Searchfields.form"
-File[17]=".src/Classi/MplayerClass.class:1579.59"
+File[17]=".src/Classi/MplayerClass.class:946.3"
 File[18]=".src/Form/ProfileManager.class:37.125"
 File[19]=".src/Form/AskName.class:17.14"
 File[20]=".src/Form/GeneralOptions.form"
@@ -1555,7 +1555,7 @@ File[37]=".src/Form/ladspahelper.class:113.50"
 File[38]=".src/Form/LogWindow.class:0.0"
 File[39]=".src/Form/Chains.form"
 File[40]=".src/Classi/mpris.class:131.20"
-File[41]=".src/Form/Chains.class:301.0"
+File[41]=".src/Form/Chains.class:260.15"
 File[42]=".src/0_Moduli/MyDialog.class:46.2"
 File[43]=".src/Form/ButtonMenu.form"
 File[44]=".src/Classi/FloatSpinBox.class:133.23"
@@ -1581,7 +1581,7 @@ File[63]=".src/Form/XConfigureVideoDriver.class:318.0"
 File[64]=".src/Form/AudioConvert.form"
 File[65]=".src/Form/AudioConvert.class:144.0"
 File[66]=".src/Form/AskName.form"
-File[67]=".src/Classi/YoutubeClass.class:664.13"
+File[67]=".src/Classi/YoutubeClass.class:22.62"
 File[68]=".src/Form/AddUriForm.form"
 File[69]=".src/Classi/PodCast.class:35.0"
 File[70]=".src/Classi/IceCastClass.class:114.15"
@@ -1589,7 +1589,9 @@ File[71]=".src/Classi/dvbsnoop_class.class:333.0"
 File[72]=".src/Form/AddUriForm.class:41.40"
 File[73]=".src/Classi/AudiotagClass.class:136.15"
 File[74]=".src/Classi/FlashClass.class:19.110"
-Count=74
+File[75]=".src/Form/VideoEqualizer.form"
+File[76]=".src/Form/VideoEqualizer.class:123.0"
+Count=76
 
 [Watches]
 Count=16
