pulse audiodriver controls enabled

--- a/.settings
+++ b/.settings
@@ -1517,10 +1517,10 @@ File[1]=".src/0_Moduli/Global.module:484.106"
 Fold[1]=[184,203,209,217,276,279,282,286,301,313,325,347,359,377,576,618,670,920,931,944,959,991,1001,1014]
 File[2]=".src/Classi/StartClass.class:20.0"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:6066.0"
+File[4]=".src/Form/FMain.class:3097.13"
 File[5]=".src/Classi/SettingsClass.class:12.35"
 Active=6
-File[6]="CHANGELOG_GIT:3.48"
+File[6]="CHANGELOG_GIT:3.10"
 File[7]=".src/Classi/ShoutCastClass.class:246.19"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:100.10"
 File[9]=".src/Classi/PlaylistClass.class:1227.0"
@@ -1536,7 +1536,7 @@ File[18]=".src/Form/ProfileManager.class:37.125"
 File[19]=".src/Form/AskName.class:17.14"
 File[20]=".src/Form/GeneralOptions.form"
 File[21]=".src/Form/GeneralOptions.class:251.69"
-File[22]=".src/Form/CoverManager.class:213.0"
+File[22]=".src/Form/CoverManager.class:15.16"
 File[23]=".src/Form/EpgForm.class:495.22"
 File[24]=".src/Classi/AlbumView.class:88.23"
 File[25]=".src/Form/CoverManager.form"
@@ -1550,7 +1550,7 @@ File[32]=".src/Form/MyQuestion.class:38.3"
 File[33]=".src/Form/MyQuestion.form"
 File[34]=".src/Form/ladspahelper.form"
 File[35]=".src/Form/AFiltersCfg.form"
-File[36]=".src/Form/AFiltersCfg.class:5.0"
+File[36]=".src/Form/AFiltersCfg.class:13.35"
 File[37]=".src/Form/ladspahelper.class:113.50"
 File[38]=".src/Form/LogWindow.class:0.0"
 File[39]=".src/Form/Chains.form"
@@ -1592,7 +1592,10 @@ File[74]=".src/Classi/FlashClass.class:19.110"
 File[75]=".src/Form/VideoEqualizer.form"
 File[76]=".src/Form/VideoEqualizer.class:106.0"
 File[77]=".src/0_Moduli/ComboHistory.module:0.0"
-Count=77
+File[78]=".src/Form/TranslationNeeded.class:52.80"
+File[79]=".src/Classi/TagLib.class:287.0"
+File[80]=".src/Form/XConfigureAudioDriver.form"
+Count=80
 
 [Watches]
 Count=16
