--- a/.project
+++ b/.project
@@ -13,6 +13,7 @@ Component=gb.desktop
 Component=gb.form.dialog
 Component=gb.settings
 Component=gb.form.mdi
+Component=gb.image.effect
 Component=gb.libxml
 Component=gb.net
 Component=gb.net.curl
