--- a/.settings
+++ b/.settings
@@ -536,6 +536,9 @@ Geometry=[11,111,522,603]
 [DebugWindow/SourceList]
 Geometry=[0,41,344,344]
 
+[DebugWindow/Split((Split(tmpout, "[")[1]), "]")]
+Geometry=[1280,0,210,210]
+
 [DebugWindow/Split(Drag.Paste("text|plain"), "\n\r", "", True)]
 Geometry=[48,-4,210,210]
 
@@ -550,6 +553,9 @@ Geometry=[47,-3,259,445]
 
 [DebugWindow/Split(chans[i], ":")]
 Geometry=[0,0,210,210]
+
+[DebugWindow/Split(child.NEXT.text, "gb.tab")]
+Geometry=[1280,0,210,210]
 
 [DebugWindow/Split(dragdata, "\n\r", "", True)]
 Geometry=[1276,-3,210,210]
@@ -1553,17 +1559,24 @@ SearchString=True
 
 [OpenFile]
 File[1]=".src/Form/FMain.class:3495.3"
-Active=2
-File[2]=".src/Classi/MplayerClass.class:1767.3"
+File[2]=".src/Classi/MplayerClass.class:1239.0"
 File[3]=".src/Classi/SettingsClass.class:14.73"
 File[4]=".src/Form/VideoEqualizer.form"
-File[5]=".src/Form/VideoEqualizer.class:183.33"
+File[5]=".src/Form/VideoEqualizer.class:79.17"
 File[6]=".src/Form/FMain.form"
-File[7]="CHANGELOG_GIT:4.0"
+Active=7
+File[7]="CHANGELOG_GIT:5.2"
 File[8]=".src/Classi/IceCastClass.class:21.20"
 File[9]=".src/0_Moduli/Global.module:277.0"
 File[10]=".src/Form/AudioForm.class:10.0"
-Count=10
+File[11]=".src/Form/XConfigureVideoDriver.form"
+File[12]=".src/Form/XConfigureAudioDriver.form"
+File[13]=".src/Form/XConfigureVideoDriver.class:0.0"
+File[14]=".src/Form/XConfigureAudioDriver.class:331.33"
+File[15]=".src/Form/AudioVideoCodecs.form"
+File[16]=".src/Form/AudioVideoCodecs.class:9.0"
+File[17]=".src/Form/AudioForm.form"
+Count=17
 
 [Watches]
 Count=16
