Don't change brightness on overbright change with vaapi and vdpau

--- a/.settings
+++ b/.settings
@@ -1558,42 +1558,28 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]=".src/Form/FMain.class:3188.2"
-File[2]=".src/Classi/MplayerClass.class:1767.25"
-File[3]=".src/Classi/SettingsClass.class:14.73"
-File[4]=".src/Form/VideoEqualizer.form"
-File[5]=".src/Form/VideoEqualizer.class:192.0"
-File[6]=".src/Form/FMain.form"
-Active=7
-File[7]="CHANGELOG_GIT:21.41"
-File[8]=".src/Classi/IceCastClass.class:21.20"
-File[9]=".src/0_Moduli/Global.module:277.0"
-File[10]=".src/Form/AudioForm.class:10.0"
-File[11]=".src/Form/XConfigureVideoDriver.form"
-File[12]=".src/Form/XConfigureAudioDriver.form"
-File[13]=".src/Form/XConfigureVideoDriver.class:0.0"
-File[14]=".src/Form/XConfigureAudioDriver.class:331.33"
-File[15]=".src/Form/AudioVideoCodecs.form"
-File[16]=".src/Form/AudioVideoCodecs.class:9.0"
-File[17]=".src/Form/AudioForm.form"
-Count=17
+File[1]=".src/Classi/MplayerClass.class:1643.3"
+File[2]=".src/Classi/SettingsClass.class:14.73"
+File[3]=".src/Form/VideoEqualizer.form"
+File[4]=".src/Form/VideoEqualizer.class:203.3"
+File[5]=".src/Form/FMain.form"
+Active=6
+File[6]="CHANGELOG_GIT:3.53"
+File[7]=".src/Classi/IceCastClass.class:21.20"
+File[8]=".src/0_Moduli/Global.module:277.0"
+File[9]=".src/Form/AudioForm.class:10.0"
+File[10]=".src/Form/XConfigureVideoDriver.form"
+File[11]=".src/Form/XConfigureAudioDriver.form"
+File[12]=".src/Form/XConfigureVideoDriver.class:0.0"
+File[13]=".src/Form/XConfigureAudioDriver.class:203.2"
+File[14]=".src/Form/AudioVideoCodecs.form"
+File[15]=".src/Form/AudioVideoCodecs.class:9.0"
+File[16]=".src/Form/AudioForm.form"
+File[17]=".src/Form/GeneralOptions.form"
+File[18]=".src/Form/FMain.class:4501.3"
+Count=18
 
 [Watches]
-Count=16
-Watch[1]="mylibrary.searchtable.count"
-Watch[2]="fmain.librarygrid.rows.count"
-Watch[3]="url"
-Watch[4]="node1.Children[t].name"
-Watch[5]="left(fullpathname)"
-Watch[6]="right(fullpathname)"
-Watch[7]="len(fullpath) = len(fullpathname)"
-Watch[8]="len(fullpath)"
-Watch[9]="len(fullpathname)"
-Watch[10]="mid(fullpath,2)"
-Watch[11]="mid(fullpath,50)"
-Watch[12]="mid(fullpath,51)"
-Watch[13]="mid(fullpathname,50)"
-Watch[14]="fullpath"
-Watch[15]="fullpathname"
-Watch[16]="cgi.decode(myline)"
+Count=1
+Watch[1]="doanalyze"
 
