--- a/.settings
+++ b/.settings
@@ -176,6 +176,12 @@ Geometry=[1276,-3,210,210]
 [DebugWindow/DraggingRows]
 Geometry=[0,0,301,301]
 
+[DebugWindow/DriversPanel.children]
+Geometry=[44,-3,254,416]
+
+[DebugWindow/DriversPanel.children[0]]
+Geometry=[58,11,254,416]
+
 [DebugWindow/Droppedfiles]
 Geometry=[21,413,646,301]
 
@@ -340,6 +346,9 @@ Geometry=[0,0,344,344]
 
 [DebugWindow/Me]
 Geometry=[66,49,830,649]
+
+[DebugWindow/Me.Children]
+Geometry=[44,0,210,210]
 
 [DebugWindow/MediaHeaders]
 Geometry=[304,489,761,765]
@@ -656,6 +665,9 @@ Geometry=[0,0,301,301]
 [DebugWindow/TagsAndValues]
 Geometry=[0,0,301,301]
 
+[DebugWindow/TempList]
+Geometry=[346,376,836,429]
+
 [DebugWindow/TempTable]
 Geometry=[0,0,723,344]
 
@@ -665,8 +677,26 @@ Geometry=[0,0,210,210]
 [DebugWindow/TheComboBox]
 Geometry=[0,0,301,301]
 
+[DebugWindow/TheComboBox.List]
+Geometry=[44,-3,528,697]
+
+[DebugWindow/TheComboBox[i]]
+Geometry=[44,0,1008,404]
+
 [DebugWindow/TheContainer]
 Geometry=[1511,132,576,699]
+
+[DebugWindow/TheContainer.CheckBox1]
+Geometry=[1525,146,576,699]
+
+[DebugWindow/TheContainer.CheckBox10]
+Geometry=[1525,146,576,699]
+
+[DebugWindow/TheContainer.Controls]
+Geometry=[1525,146,576,699]
+
+[DebugWindow/TheContainer.controls]
+Geometry=[44,-3,210,210]
 
 [DebugWindow/TheForm]
 Geometry=[691,104,506,663]
@@ -746,6 +776,9 @@ Geometry=[51,0,210,210]
 
 [DebugWindow/WorkingCover["mygrid"]]
 Geometry=[1276,-3,210,210]
+
+[DebugWindow/XConfigureVideoDriver.vaapiBTN]
+Geometry=[44,0,210,210]
 
 [DebugWindow/XmlElement(node.Children[t]).Attributes]
 Geometry=[62,14,344,344]
@@ -909,6 +942,9 @@ Geometry=[0,0,344,344]
 [DebugWindow/chans]
 Geometry=[0,0,210,837]
 
+[DebugWindow/child]
+Geometry=[44,-3,306,473]
+
 [DebugWindow/combourls]
 Geometry=[46,0,210,210]
 
@@ -999,6 +1035,30 @@ Geometry=[-4,-4,561,728]
 
 [DebugWindow/fmain.Controls["Button1"]]
 Geometry=[0,0,344,344]
+
+[DebugWindow/fmain.menus]
+Geometry=[44,-3,231,497]
+
+[DebugWindow/fmain.menus[16]]
+Geometry=[58,11,231,497]
+
+[DebugWindow/fmain.menus[16].Children]
+Geometry=[72,25,231,497]
+
+[DebugWindow/fmain.menus[16].Children[0]]
+Geometry=[86,39,231,497]
+
+[DebugWindow/fmain.menus[16].Children[0].Children]
+Geometry=[100,53,231,497]
+
+[DebugWindow/fmain.menus[1]]
+Geometry=[58,11,231,497]
+
+[DebugWindow/fmain.menus[2]]
+Geometry=[58,11,231,497]
+
+[DebugWindow/fmain.menus[4]]
+Geometry=[58,11,231,497]
 
 [DebugWindow/fsform]
 Geometry=[1280,0,427,781]
@@ -1133,7 +1193,7 @@ Geometry=[1280,0,490,646]
 Geometry=[47,0,210,210]
 
 [DebugWindow/mplayer]
-Geometry=[0,0,344,344]
+Geometry=[44,134,344,210]
 
 [DebugWindow/mplayer.MediaHeaders]
 Geometry=[0,0,344,344]
@@ -1267,6 +1327,9 @@ Geometry=[2189,550,301,301]
 [DebugWindow/obj.Item]
 ShowHidden=True
 Geometry=[1813,369,301,301]
+
+[DebugWindow/object]
+Geometry=[44,-3,210,210]
 
 [DebugWindow/objs]
 Geometry=[0,0,301,301]
@@ -1558,28 +1621,77 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]=".src/Classi/MplayerClass.class:1643.3"
-File[2]=".src/Classi/SettingsClass.class:14.73"
+File[1]=".src/Classi/MplayerClass.class:1792.30"
+File[2]=".src/Classi/SettingsClass.class:305.29"
 File[3]=".src/Form/VideoEqualizer.form"
-File[4]=".src/Form/VideoEqualizer.class:203.3"
+File[4]=".src/Form/VideoEqualizer.class:136.16"
 File[5]=".src/Form/FMain.form"
-Active=6
-File[6]="CHANGELOG_GIT:3.53"
+File[6]="CHANGELOG_GIT:9.10"
 File[7]=".src/Classi/IceCastClass.class:21.20"
-File[8]=".src/0_Moduli/Global.module:277.0"
+File[8]=".src/0_Moduli/Global.module:139.0"
 File[9]=".src/Form/AudioForm.class:10.0"
 File[10]=".src/Form/XConfigureVideoDriver.form"
 File[11]=".src/Form/XConfigureAudioDriver.form"
-File[12]=".src/Form/XConfigureVideoDriver.class:0.0"
-File[13]=".src/Form/XConfigureAudioDriver.class:203.2"
+File[12]=".src/Form/XConfigureVideoDriver.class:237.2"
+File[13]=".src/Form/XConfigureAudioDriver.class:295.28"
 File[14]=".src/Form/AudioVideoCodecs.form"
-File[15]=".src/Form/AudioVideoCodecs.class:9.0"
+File[15]=".src/Form/AudioVideoCodecs.class:129.56"
 File[16]=".src/Form/AudioForm.form"
 File[17]=".src/Form/GeneralOptions.form"
-File[18]=".src/Form/FMain.class:4501.3"
-Count=18
+File[18]=".src/Form/FMain.class:1638.0"
+File[19]=".src/Form/GeneralOptions.class:18.15"
+File[20]=".src/Form/AFiltersCfg.class:396.0"
+File[21]=".src/Form/Chains.form"
+File[22]=".src/Form/Chains.class:239.2"
+File[23]=".src/Form/AddUriForm.form"
+File[24]=".src/Form/AFiltersCfg.form"
+File[25]=".src/Form/AllOptions.form"
+File[26]=".src/Form/AskName.form"
+File[27]=".src/Form/AudioConvert.form"
+File[28]=".src/Form/ButtonMenu_DELETEME.form"
+File[29]=".src/Form/ChooseAspect.form"
+File[30]=".src/Form/CountDown.form"
+File[31]=".src/Form/CoverManager.form"
+File[32]=".src/Form/DVBTuner.form"
+File[33]=".src/Form/EpgForm.form"
+File[34]=".src/Form/FormLyrics.form"
+File[35]=".src/Form/FsForm.form"
+File[36]=".src/Form/HotKeyGrab.form"
+File[37]=".src/Form/HotKeys.form"
+File[38]=".src/Form/ladspahelper.form"
+File[39]=".src/Form/LogWindow.form"
+File[40]=".src/Form/MyAskName.form"
+File[41]=".src/Form/MyQuestion.form"
+File[42]=".src/Form/OpenSubtitesForm.form"
+File[43]=".src/Form/OverlayTrayTip.form"
+File[44]=".src/Form/ProfileManager.form"
+File[45]=".src/Form/RealtimeForm.form"
+File[46]=".src/Form/Searchfields.form"
+File[47]=".src/Form/ServiceForm.form"
+File[48]=".src/Form/SubAndOsd.form"
+File[49]=".src/Form/SubAndOsd.class:330.23"
+File[50]=".src/Form/TextDialog.form"
+File[51]=".src/Form/TranslationNeeded.form"
+File[52]=".src/Form/VFiltersCfg.form"
+File[53]=".src/Form/VFiltersCfg.class:552.23"
+File[54]=".src/Form/Xt7Egg.form"
+File[55]=".src/Form/zzzFake.form"
+File[56]=".src/Classi/StartClass.class:27.2"
+File[57]=".src/Classi/DbusProperties.class:90.0"
+File[58]=".src/Form/AddUriForm.class:18.0"
+File[59]="FakeInput.conf:312.9"
+File[60]=".src/Classi/YoutubeClass.class:202.12"
+File[61]=".src/Classi/ShoutCastClass.class:272.2"
+File[62]=".src/Classi/Meters.class:179.7"
+File[63]=".src/Form/ButtonMenu_DELETEME.class:19.8"
+Active=64
+File[64]=".src/0_Moduli/ComboHistory.module:8.13"
+Count=64
 
 [Watches]
-Count=1
+Count=4
 Watch[1]="doanalyze"
+Watch[2]="otheroptions"
+Watch[3]="cachedopts"
+Watch[4]="mplayer.avcodecs"
 
