--- a/.settings
+++ b/.settings
@@ -1621,7 +1621,7 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]=".src/Classi/MplayerClass.class:1792.30"
+File[1]=".src/Classi/MplayerClass.class:320.3"
 File[2]=".src/Classi/SettingsClass.class:305.29"
 File[3]=".src/Form/VideoEqualizer.form"
 File[4]=".src/Form/VideoEqualizer.class:136.16"
@@ -1638,7 +1638,8 @@ File[14]=".src/Form/AudioVideoCodecs.form"
 File[15]=".src/Form/AudioVideoCodecs.class:129.56"
 File[16]=".src/Form/AudioForm.form"
 File[17]=".src/Form/GeneralOptions.form"
-File[18]=".src/Form/FMain.class:1638.0"
+Active=18
+File[18]=".src/Form/FMain.class:11104.0"
 File[19]=".src/Form/GeneralOptions.class:18.15"
 File[20]=".src/Form/AFiltersCfg.class:396.0"
 File[21]=".src/Form/Chains.form"
@@ -1648,45 +1649,43 @@ File[24]=".src/Form/AFiltersCfg.form"
 File[25]=".src/Form/AllOptions.form"
 File[26]=".src/Form/AskName.form"
 File[27]=".src/Form/AudioConvert.form"
-File[28]=".src/Form/ButtonMenu_DELETEME.form"
-File[29]=".src/Form/ChooseAspect.form"
-File[30]=".src/Form/CountDown.form"
-File[31]=".src/Form/CoverManager.form"
-File[32]=".src/Form/DVBTuner.form"
-File[33]=".src/Form/EpgForm.form"
-File[34]=".src/Form/FormLyrics.form"
-File[35]=".src/Form/FsForm.form"
-File[36]=".src/Form/HotKeyGrab.form"
-File[37]=".src/Form/HotKeys.form"
-File[38]=".src/Form/ladspahelper.form"
-File[39]=".src/Form/LogWindow.form"
-File[40]=".src/Form/MyAskName.form"
-File[41]=".src/Form/MyQuestion.form"
-File[42]=".src/Form/OpenSubtitesForm.form"
-File[43]=".src/Form/OverlayTrayTip.form"
-File[44]=".src/Form/ProfileManager.form"
-File[45]=".src/Form/RealtimeForm.form"
-File[46]=".src/Form/Searchfields.form"
-File[47]=".src/Form/ServiceForm.form"
-File[48]=".src/Form/SubAndOsd.form"
-File[49]=".src/Form/SubAndOsd.class:330.23"
-File[50]=".src/Form/TextDialog.form"
-File[51]=".src/Form/TranslationNeeded.form"
-File[52]=".src/Form/VFiltersCfg.form"
-File[53]=".src/Form/VFiltersCfg.class:552.23"
-File[54]=".src/Form/Xt7Egg.form"
-File[55]=".src/Form/zzzFake.form"
-File[56]=".src/Classi/StartClass.class:27.2"
-File[57]=".src/Classi/DbusProperties.class:90.0"
-File[58]=".src/Form/AddUriForm.class:18.0"
-File[59]="FakeInput.conf:312.9"
-File[60]=".src/Classi/YoutubeClass.class:202.12"
-File[61]=".src/Classi/ShoutCastClass.class:272.2"
-File[62]=".src/Classi/Meters.class:179.7"
-File[63]=".src/Form/ButtonMenu_DELETEME.class:19.8"
-Active=64
-File[64]=".src/0_Moduli/ComboHistory.module:8.13"
-Count=64
+File[28]=".src/Form/ChooseAspect.form"
+File[29]=".src/Form/CountDown.form"
+File[30]=".src/Form/CoverManager.form"
+File[31]=".src/Form/DVBTuner.form"
+File[32]=".src/Form/EpgForm.form"
+File[33]=".src/Form/FormLyrics.form"
+File[34]=".src/Form/FsForm.form"
+File[35]=".src/Form/HotKeyGrab.form"
+File[36]=".src/Form/HotKeys.form"
+File[37]=".src/Form/ladspahelper.form"
+File[38]=".src/Form/LogWindow.form"
+File[39]=".src/Form/MyAskName.form"
+File[40]=".src/Form/MyQuestion.form"
+File[41]=".src/Form/OpenSubtitesForm.form"
+File[42]=".src/Form/OverlayTrayTip.form"
+File[43]=".src/Form/ProfileManager.form"
+File[44]=".src/Form/RealtimeForm.form"
+File[45]=".src/Form/Searchfields.form"
+File[46]=".src/Form/ServiceForm.form"
+File[47]=".src/Form/SubAndOsd.form"
+File[48]=".src/Form/SubAndOsd.class:330.23"
+File[49]=".src/Form/TextDialog.form"
+File[50]=".src/Form/TranslationNeeded.form"
+File[51]=".src/Form/VFiltersCfg.form"
+File[52]=".src/Form/VFiltersCfg.class:552.23"
+File[53]=".src/Form/Xt7Egg.form"
+File[54]=".src/Form/zzzFake.form"
+File[55]=".src/Classi/StartClass.class:27.2"
+File[56]=".src/Classi/DbusProperties.class:90.0"
+File[57]=".src/Form/AddUriForm.class:18.0"
+File[58]="FakeInput.conf:312.9"
+File[59]=".src/Classi/YoutubeClass.class:202.12"
+File[60]=".src/Classi/ShoutCastClass.class:272.2"
+File[61]=".src/Classi/Meters.class:179.7"
+File[62]=".src/0_Moduli/ComboHistory.module:8.13"
+File[63]="barglow.png"
+Count=63
 
 [Watches]
 Count=4
