--- a/.settings
+++ b/.settings
@@ -1627,15 +1627,15 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]=".src/Classi/MplayerClass.class:315.0"
+File[1]=".src/Classi/MplayerClass.class:674.0"
 File[2]=".src/Classi/SettingsClass.class:305.29"
 File[3]=".src/Form/VideoEqualizer.form"
 File[4]=".src/Form/VideoEqualizer.class:136.16"
-Active=5
 File[5]=".src/Form/FMain.form"
-File[6]="CHANGELOG_GIT:4.10"
+Active=6
+File[6]="CHANGELOG_GIT:3.0"
 File[7]=".src/Classi/IceCastClass.class:21.20"
-File[8]=".src/0_Moduli/Global.module:139.0"
+File[8]=".src/0_Moduli/Global.module:1061.0"
 File[9]=".src/Form/AudioForm.class:139.2"
 File[10]=".src/Form/XConfigureVideoDriver.form"
 File[11]=".src/Form/XConfigureAudioDriver.form"
@@ -1645,7 +1645,7 @@ File[14]=".src/Form/AudioVideoCodecs.form"
 File[15]=".src/Form/AudioVideoCodecs.class:129.56"
 File[16]=".src/Form/AudioForm.form"
 File[17]=".src/Form/GeneralOptions.form"
-File[18]=".src/Form/FMain.class:11131.24"
+File[18]=".src/Form/FMain.class:3391.54"
 File[19]=".src/Form/GeneralOptions.class:18.15"
 File[20]=".src/Form/AFiltersCfg.class:396.0"
 File[21]=".src/Form/Chains.form"
@@ -1691,7 +1691,10 @@ File[60]=".src/Classi/ShoutCastClass.class:272.2"
 File[61]=".src/Classi/Meters.class:179.7"
 File[62]=".src/0_Moduli/ComboHistory.module:8.13"
 File[63]="barglow.png"
-Count=63
+File[64]=".src/Form/MyAskName.class:0.0"
+File[65]=".src/Form/FsForm.class:5.21"
+File[66]=".src/Form/CoverManager.class:69.8"
+Count=66
 
 [Watches]
 Count=4
