--- a/.settings
+++ b/.settings
@@ -2,7 +2,8 @@
 Count=0
 
 [DebugWindow]
-Count=0
+Count=1
+DebugWindow[1]="mplayer.cddbtracks"
 
 [DebugWindow/AC3s]
 Geometry=[928,154,344,344]
@@ -1627,15 +1628,15 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]=".src/Classi/MplayerClass.class:674.0"
+File[1]=".src/Classi/MplayerClass.class:202.39"
 File[2]=".src/Classi/SettingsClass.class:305.29"
 File[3]=".src/Form/VideoEqualizer.form"
 File[4]=".src/Form/VideoEqualizer.class:136.16"
 File[5]=".src/Form/FMain.form"
 Active=6
-File[6]="CHANGELOG_GIT:3.0"
+File[6]="CHANGELOG_GIT:6.26"
 File[7]=".src/Classi/IceCastClass.class:21.20"
-File[8]=".src/0_Moduli/Global.module:1061.0"
+File[8]=".src/0_Moduli/Global.module:271.0"
 File[9]=".src/Form/AudioForm.class:139.2"
 File[10]=".src/Form/XConfigureVideoDriver.form"
 File[11]=".src/Form/XConfigureAudioDriver.form"
@@ -1645,7 +1646,7 @@ File[14]=".src/Form/AudioVideoCodecs.form"
 File[15]=".src/Form/AudioVideoCodecs.class:129.56"
 File[16]=".src/Form/AudioForm.form"
 File[17]=".src/Form/GeneralOptions.form"
-File[18]=".src/Form/FMain.class:3391.54"
+File[18]=".src/Form/FMain.class:8258.8"
 File[19]=".src/Form/GeneralOptions.class:18.15"
 File[20]=".src/Form/AFiltersCfg.class:396.0"
 File[21]=".src/Form/Chains.form"
