progressbar color fix

--- a/.settings
+++ b/.settings
@@ -1634,7 +1634,7 @@ File[3]=".src/Form/VideoEqualizer.form"
 File[4]=".src/Form/VideoEqualizer.class:136.16"
 File[5]=".src/Form/FMain.form"
 Active=6
-File[6]="CHANGELOG_GIT:6.26"
+File[6]="CHANGELOG_GIT:7.24"
 File[7]=".src/Classi/IceCastClass.class:21.20"
 File[8]=".src/0_Moduli/Global.module:271.0"
 File[9]=".src/Form/AudioForm.class:139.2"
@@ -1646,7 +1646,7 @@ File[14]=".src/Form/AudioVideoCodecs.form"
 File[15]=".src/Form/AudioVideoCodecs.class:129.56"
 File[16]=".src/Form/AudioForm.form"
 File[17]=".src/Form/GeneralOptions.form"
-File[18]=".src/Form/FMain.class:8258.8"
+File[18]=".src/Form/FMain.class:11123.25"
 File[19]=".src/Form/GeneralOptions.class:18.15"
 File[20]=".src/Form/AFiltersCfg.class:396.0"
 File[21]=".src/Form/Chains.form"
@@ -1695,7 +1695,8 @@ File[63]="barglow.png"
 File[64]=".src/Form/MyAskName.class:0.0"
 File[65]=".src/Form/FsForm.class:5.21"
 File[66]=".src/Form/CoverManager.class:69.8"
-Count=66
+File[67]=".src/Form/FormLyrics.class:20.25"
+Count=67
 
 [Watches]
 Count=4
