New buttonmenu that shows mountpoints It is in the browse tab, home button has been removed since the home folder, as well as the desktop folder will appears in the popup menu

--- a/.settings
+++ b/.settings
@@ -1628,26 +1628,26 @@ SearchString=True
 
 [OpenFile]
 File[1]=".src/Classi/MplayerClass.class:856.73"
-File[2]=".src/Classi/SettingsClass.class:305.29"
+Active=2
+File[2]=".src/Classi/SettingsClass.class:427.3"
 File[3]=".src/Form/VideoEqualizer.form"
 File[4]=".src/Form/VideoEqualizer.class:10.0"
 File[5]=".src/Form/FMain.form"
-Active=6
 File[6]="CHANGELOG_GIT:4.10"
 File[7]=".src/Classi/IceCastClass.class:21.20"
-File[8]=".src/0_Moduli/Global.module:271.0"
+File[8]=".src/0_Moduli/Global.module:72.40"
 File[9]=".src/Form/AudioForm.class:139.2"
 File[10]=".src/Form/XConfigureVideoDriver.form"
 File[11]=".src/Form/XConfigureAudioDriver.form"
-File[12]=".src/Form/XConfigureVideoDriver.class:156.0"
-File[13]=".src/Form/XConfigureAudioDriver.class:295.28"
+File[12]=".src/Form/XConfigureVideoDriver.class:164.0"
+File[13]=".src/Form/XConfigureAudioDriver.class:190.17"
 File[14]=".src/Form/AudioVideoCodecs.form"
 File[15]=".src/Form/AudioVideoCodecs.class:129.56"
 File[16]=".src/Form/AudioForm.form"
 File[17]=".src/Form/GeneralOptions.form"
-File[18]=".src/Form/FMain.class:1836.42"
-File[19]=".src/Form/GeneralOptions.class:1132.0"
-File[20]=".src/Form/AFiltersCfg.class:396.0"
+File[18]=".src/Form/FMain.class:1164.2"
+File[19]=".src/Form/GeneralOptions.class:260.0"
+File[20]=".src/Form/AFiltersCfg.class:553.0"
 File[21]=".src/Form/Chains.form"
 File[22]=".src/Form/Chains.class:239.2"
 File[23]=".src/Form/AddUriForm.form"
@@ -1688,7 +1688,7 @@ File[57]=".src/Form/AddUriForm.class:18.0"
 File[58]="FakeInput.conf:312.9"
 File[59]=".src/Classi/YoutubeClass.class:202.12"
 File[60]=".src/Classi/ShoutCastClass.class:272.2"
-File[61]=".src/Classi/Meters.class:179.7"
+File[61]=".src/Classi/Meters.class:27.19"
 File[62]=".src/0_Moduli/ComboHistory.module:8.13"
 File[63]="barglow.png"
 File[64]=".src/Form/MyAskName.class:0.0"
@@ -1696,7 +1696,8 @@ File[65]=".src/Form/FsForm.class:5.21"
 File[66]=".src/Form/CoverManager.class:69.8"
 File[67]=".src/Form/FormLyrics.class:20.25"
 File[68]=".src/Classi/dvbsnoop_class.class:315.9"
-Count=68
+File[69]=".src/Form/zzzFake.class:27.43"
+Count=69
 
 [Watches]
 Count=4
